artifacthub/library/general/allowedrepos/2.0.0/samples/repo-must-be-openpolicyagent/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-allowed
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
    - name: opa
      image: ubuntu:latest
      resources:
        limits:
          cpu: "200m"
          memory: "50Mi"
