artifacthub/library/general/allowedrepos/2.0.0/samples/repo-must-be-openpolicyagent/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedReposV2
metadata:
  name: repo-is-openpolicyagent
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    repos:
      - "openpolicyagent/"
      - "myregistry.azurecr.io"
      - "mydockerhub"
    images:
      - "ubuntu"
      - "123456789123.dkr.ecr.eu-west-1.amazonaws.com/postgres"
